--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.2"
   },
   "devDependencies": {
-    "jest": "^27.4.7"
+    "jest": "^27.4.7",
+    "nodemon": "^2.0.15"
   }
 }
