--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "knex": "^1.0.1"
   },
   "devDependencies": {
     "jest": "^27.4.7",
