--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
-    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "vue": "^3.2.31",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
